--- a/pogodynka/templates/base.html.twig
+++ b/pogodynka/templates/base.html.twig
@@ -37,6 +37,14 @@
 </nav>
 <div class="container">
     {% block body %}{% endblock %}
+
+    {% if is_granted('ROLE_USER') %}
+        <a href="{{ path('app_logout') }}">Logout</a>
+    {% else %}
+        <a href="{{ path('app_login') }}">Login</a>
+    {% endif %}
+
 </div>
+
 </body>
 </html>
